[tool.poetry]
name = "misp-modules-website"
version = "0.1.0"
description = "Web application for MISP modules"
authors = ["MISP Contributors <info@misp-project.org>"]
readme = "README.md"
packages = [
  { include = "app" }        # importable package (has __init__.py)
]
include = [
  "main.py"                  # loose module that isn’t inside a package
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
sqlalchemy = "*"
flask-session = "*"
flask-sqlalchemy = "*"
flask-wtf = "*"
flask-migrate = "*"
flask-login = "*"
wtforms = "*"
werkzeug = "3.0.6"
flask-restx = "*"
python-dateutil = "*"
schedule = "*"
gunicorn = "*"
jsonschema = "*"
requests = "*"
dotenv = "^0.9.9"

[tool.poetry.scripts]
dev-site = "main:main --dev"
db-init = "main:main --db-init"
db-migrate = "main:main --db-migrate"
db-upgrade = "main:main --db-upgrade"
db-downgrade = "main:main --db-downgrade"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
